fixed issues where expanding an item accordion would give a scrollbar to the entire movie content element

--- a/src/pages/movie.module.scss
+++ b/src/pages/movie.module.scss
@@ -28,7 +28,7 @@ $__CSS-MODULE__: true;
         overflow: hidden;;
     }
     .content {
-        overflow: auto; /* Show overflow content with scrollbar */
+        overflow: hidden;
         width: 50%;
         padding: var(--atomX3);
         display: flex;
